# sigmah

./: Cargo.toml  README.md
src/: concise_bitvec.rs  lib.rs  mask.rs  multiversion.rs  signature.rs  simd.rs  utils.rs
src/multiversion/: simd.rs  tests.rs
src/signature/: naive.rs  rayon.rs  rayon_simd.rs  simd.rs
src/utils/: simd.rs
