[package]
name = "sigmah"
version = "0.1.5"
edition = "2021"
description = "Create and scan binary signature in Rust efficiently"
license = "MIT"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
multiversion = { version = "0.7.4", default-features = false }
num-traits = { version = "0.2", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
serde-big-array = { version = "0.5.1", optional = true }

[features]
default = ["std", "simd"]
std = ["bitvec/std", "multiversion/std", "num-traits?/std", "serde?/std"]
simd = ["num-traits"]
serde = ["dep:serde", "bitvec/serde", "serde-big-array"]
