[package]
name = "sigmah"
version = "0.6.1"
edition = "2021"
description = "Create and scan binary signature in Rust efficiently"
license = "MIT"
authors = ["Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>"]
repository = "https://github.com/stevefan1999-personal/sigmah"
keywords = ["scanning", "binary", "simd", "signature", "const"]
categories = ["algorithms", "no-std::no-alloc", "text-processing"]

[dependencies]
arrayvec = { version = "0.7.6", optional = true, default-features = false }
bitvec = { version = "1.0.1", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = ["display", "from", "into", "error", "deref"] }
multiversion = { version = "0.7.4", default-features = false }
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
serde-big-array = { version = "0.5.1", optional = true }

[features]
default = ["std"]
std = ["bitvec/std", "multiversion/std", "serde?/std", "arrayvec?/std", "derive_more/std"]
simd = []
serde = ["dep:serde", "bitvec/serde", "serde-big-array", "arrayvec?/serde"]
rayon = ["dep:rayon", "dep:arrayvec", "std"]
